# mf4_rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
config/: ca.toml  cc.toml  cg.toml  cn.toml  dg.toml  dz.toml  hl.toml  md.toml  tx.toml
src/: components.rs  data_serde.rs  lib.rs  main.rs  parser.rs
src/components/: ca.rs  cc.rs  cg.rs  cn.rs  dg.rs  dx.rs  si.rs
test/: 02.MDF  demo.mf4  hd.toml  si.toml  string_and_array.mf4
