[package]
name = "mf4_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.12" ,  features =  ["preserve_order"] }
bytes = { version = "1.5.0", features = ["serde"] }
byteorder = "1.5.0"
indexmap = "2.2.5"
rust-embed = "8.3.0"
include_dir = "0.7.3"
lazy_static = "1.4.0"
chrono = "0.4.35"

